--- a/portfolio.css
+++ b/portfolio.css
@@ -6,37 +6,37 @@ main {
 }
 
 .box1 {
-    background-color: lightblue;
+    background: lightblue;
     grid-column: 1/2;
     grid-row: 1/2;
 }
 
 .box2 {
-    background-color: lightcoral;
+    background: lightcoral;
     grid-column: 2/4;
     grid-row: 1/2;
 }
 
 .box3 {
-    background-color: lightgreen;
+    background: lightgreen;
     grid-column: 1/3;
     grid-row: 2/3;
 }
 
 .box4 {
-    background-color: lightgoldenrodyellow;
+    background: lightgoldenrodyellow;
     grid-column: 3/4;
     grid-row: 2/4;
 }
 
 .box5 {
-    background-color: lightsalmon;
+    background: lightsalmon;
     grid-column: 1/3;
     grid-row: 3/5;
 }
 
 .box6 {
-    background-color: lightgray;
+    background: lightgray;
     grid-column: 3/4;
     grid-row: 4/5;
 }
