--- a/portfolio.css
+++ b/portfolio.css
@@ -1,5 +1,6 @@
 body {
     margin: 0%;
+    background: black;
 }
 
 h1 {
@@ -7,7 +8,13 @@ h1 {
 }
 
 div {
-    padding-top: 50%;
+    padding-top: 10%;
+    transition: all 0.3s ease-in-out;
+}
+
+div:hover {
+    box-shadow: 0 0 10px black;
+    z-index: 1;
 }
 
 main {
