--- a/portfolio.css
+++ b/portfolio.css
@@ -13,8 +13,8 @@ div {
 }
 
 div:hover {
-    box-shadow: inset 0 0 10px black;
-    /*z-index: 1;*/
+    box-shadow: 0 0 10px black;
+    z-index: 1;
 }
 
 main {
