--- a/portfolio.css
+++ b/portfolio.css
@@ -25,7 +25,7 @@ main {
 }
 
 .box1 {
-    background: lightblue;
+    /*background: lightblue;*/
     grid-column: 1/2;
     grid-row: 1/2;
     text-align: center;
