--- a/portfolio.css
+++ b/portfolio.css
@@ -13,7 +13,7 @@ div {
 }
 
 div:hover {
-    box-shadow: 0 0 10px black;
+    box-shadow: inset 0 0 10px black;
     z-index: 1;
 }
 
@@ -25,7 +25,7 @@ main {
 }
 
 .box1 {
-    /*background: lightblue;*/
+    background: lightblue;
     grid-column: 1/2;
     grid-row: 1/2;
     text-align: center;
