--- a/portfolio.css
+++ b/portfolio.css
@@ -13,8 +13,12 @@ div {
 }
 
 div:hover {
-    box-shadow: inset 0 0 10px black;
+    box-shadow: 0 0 10px black;
     z-index: 1;
+}
+
+div:active {
+    box-shadow: inset 0 0 10px black;
 }
 
 main {
