--- a/profile.css
+++ b/profile.css
@@ -48,6 +48,11 @@ body {
     padding: 10px 16px !important;
 }
 
+.switch {
+    justify-content: end;
+    color: #f2f2f2;
+}
+
 .ghost-button {
     display: inline-block;
     width: 200px;
