--- a/profile.css
+++ b/profile.css
@@ -19,8 +19,7 @@ body {
 .topnav a {
     float: left;
     display: block;
-    /*color: #f2f2f2;*/
-    color: red;
+    color: #f2f2f2;
     text-align: center;
     padding: 20px 14px 20px 15px;
     text-decoration: none;
