--- a/profile.css
+++ b/profile.css
@@ -48,7 +48,7 @@ body {
 }
 
 #pic {
-    padding: 6.5px 11px !important;
+    padding: 6.5px 11px;
 }
 
 #pic:hover,
@@ -59,6 +59,7 @@ body {
 
 #picture {
     border-radius: 50%;
+    height: auto;
 }
 
 #switch {
