--- a/profile.css
+++ b/profile.css
@@ -1,10 +1,6 @@
 body {
-    margin: 0;
+    margin: 10px 30px;
     transition: background .2s ease-in-out;
-}
-
-.margin {
-    margin: 10px;
 }
 
 .topnav {
