--- a/profile.css
+++ b/profile.css
@@ -1,6 +1,8 @@
 body {
-    margin: 10px 30px;
     transition: background .2s ease-in-out;
+}
+.content{
+    margin: 0 30px 0 30px;
 }
 
 .topnav {
